@@ -1,9 +1,13 @@
 package pe.com.security.scholarship.service;
 
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -11,7 +15,9 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import pe.com.security.scholarship.domain.entity.Curso;
+import pe.com.security.scholarship.domain.entity.Estudiante;
 import pe.com.security.scholarship.domain.entity.HorarioSeccion;
+import pe.com.security.scholarship.domain.entity.Postulacion;
 import pe.com.security.scholarship.domain.entity.Seccion;
 import pe.com.security.scholarship.domain.enums.DiaSemana;
 import pe.com.security.scholarship.domain.enums.ModalidadCurso;
@@ -21,13 +27,19 @@ import pe.com.security.scholarship.dto.request.RegisterSeccionRequest;
 import pe.com.security.scholarship.dto.response.OverviewCursoResponse;
 import pe.com.security.scholarship.dto.response.RegisteredCursoResponse;
 import pe.com.security.scholarship.exception.BadRequestException;
+import pe.com.security.scholarship.exception.NotFoundException;
 import pe.com.security.scholarship.repository.CursoRepository;
+import pe.com.security.scholarship.repository.EstudianteRepository;
+import pe.com.security.scholarship.repository.PostulacionRepository;
+import pe.com.security.scholarship.util.SecurityUtils;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -50,8 +62,29 @@ class CursoServiceTest {
     @Mock
     private SeccionService seccionService;
 
+    @Mock
+    private EstudianteRepository estudianteRepository;
+
+    @Mock
+    private PostulacionRepository postulacionRepository;
+
+    @Mock
+    private PostulacionService postulacionService;
+
     @InjectMocks
     private CursoService cursoService;
+
+    private static MockedStatic<SecurityUtils> securityUtilsMock;
+
+    @BeforeAll
+    static void setUpStatic() {
+        securityUtilsMock = Mockito.mockStatic(SecurityUtils.class);
+    }
+
+    @AfterAll
+    static void closeStatic() {
+        securityUtilsMock.close();
+    }
 
     @Test
     void register_ShouldSucceed_WhenCursoHasSecciones() {
@@ -97,8 +130,7 @@ class CursoServiceTest {
         verify(cursoRepository).save(argThat(curso -> 
             curso.getSecciones() != null && 
             curso.getSecciones().size() == 2 &&
-            curso.getSecciones().get(0).getHorarios() != null &&
-            !curso.getSecciones().get(0).getHorarios().isEmpty()
+            !curso.getSecciones().getFirst().getHorarios().isEmpty()
         ));
     }
 
@@ -201,7 +233,7 @@ class CursoServiceTest {
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.getTotalElements()).isEqualTo(1);
-        assertThat(result.getContent().get(0).getNombre()).isEqualTo("Curso Test");
+        assertThat(result.getContent().getFirst().getNombre()).isEqualTo("Curso Test");
         verify(cursoRepository).findAll(pageable);
     }
 
@@ -265,8 +297,8 @@ class CursoServiceTest {
         assertThat(result).isNotNull();
         assertThat(result.getTotalElements()).isEqualTo(2);
         assertThat(result.getContent()).hasSize(2);
-        assertThat(result.getContent().get(0).getNombre()).isEqualTo("Curso 1");
-        assertThat(result.getContent().get(0).getSecciones()).hasSize(1);
+        assertThat(result.getContent().getFirst().getNombre()).isEqualTo("Curso 1");
+        assertThat(result.getContent().getFirst().getSecciones()).hasSize(1);
         
         verify(cursoRepository).findIdsCursosHorarios(eq(hoy), eq(pageable));
         verify(cursoRepository).findCursosSecciones(eq(ids), eq(hoy), eq(pageable.getSort()));
@@ -303,5 +335,99 @@ class CursoServiceTest {
                 .hasMessageContaining("Campo de ordenamiento no permitido");
 
         verify(cursoRepository, never()).findIdsCursosHorarios(any(LocalDate.class), any(Pageable.class));
+    }
+
+    @Test
+    void getOfertaDisponiblePorBeca_DeberiaRetornarListaCursos_CuandoTodoEsValido() {
+        // Arrange
+        UUID idUsuario = UUID.randomUUID();
+        when(SecurityUtils.getCurrentUserId()).thenReturn(idUsuario);
+
+        Estudiante estudiante = Estudiante.builder().id(UUID.randomUUID()).build();
+        when(estudianteRepository.findByIdUsuario(idUsuario)).thenReturn(Optional.of(estudiante));
+
+        when(postulacionService.tieneBecaActiva(estudiante.getId())).thenReturn(true);
+
+        Postulacion postulacion = Postulacion.builder().id(50).build();
+        when(postulacionRepository.findLastPostulacion(estudiante.getId())).thenReturn(Optional.of(postulacion));
+
+        Seccion seccion1 = Seccion.builder().id(100).fechaInicio(LocalDate.now().plusDays(5)).horarios(List.of()).build();
+        Seccion seccion2 = Seccion.builder().id(101).fechaInicio(LocalDate.now().plusDays(2)).horarios(List.of()).build();
+        
+        Curso curso = Curso.builder()
+                .id(1)
+                .nombre("Curso Ofertado")
+                .codigo("C100")
+                .modalidad(ModalidadCurso.ONLINE)
+                .secciones(Arrays.asList(seccion1, seccion2))
+                .build();
+
+        when(cursoRepository.findByIdPostulacion(eq(postulacion.getId()), any(LocalDate.class)))
+                .thenReturn(Collections.singletonList(curso));
+
+        // Act
+        List<OverviewCursoResponse> result = cursoService.getOfertaDisponiblePorBeca();
+
+        // Assert
+        assertThat(result).hasSize(1);
+        OverviewCursoResponse cursoResponse = result.getFirst();
+        assertThat(cursoResponse.getSecciones()).hasSize(2);
+        // Verificar ordenamiento cronológico de secciones
+        assertThat(cursoResponse.getSecciones().getFirst().getFechaInicio()).isBefore(cursoResponse.getSecciones().get(1).getFechaInicio());
+    }
+
+    @Test
+    void getOfertaDisponiblePorBeca_DeberiaLanzarNotFound_CuandoEstudianteNoExiste() {
+        // Arrange
+        UUID idUsuario = UUID.randomUUID();
+        when(SecurityUtils.getCurrentUserId()).thenReturn(idUsuario);
+        when(estudianteRepository.findByIdUsuario(idUsuario)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> cursoService.getOfertaDisponiblePorBeca())
+                .isInstanceOf(NotFoundException.class)
+                .hasMessage("No se encontró estudiante asociado al id del payload");
+
+        verify(postulacionService, never()).tieneBecaActiva(any());
+    }
+
+    @Test
+    void getOfertaDisponiblePorBeca_DeberiaLanzarBadRequest_CuandoNoTieneBecaActiva() {
+        // Arrange
+        UUID idUsuario = UUID.randomUUID();
+        when(SecurityUtils.getCurrentUserId()).thenReturn(idUsuario);
+
+        Estudiante estudiante = Estudiante.builder().id(UUID.randomUUID()).build();
+        when(estudianteRepository.findByIdUsuario(idUsuario)).thenReturn(Optional.of(estudiante));
+
+        when(postulacionService.tieneBecaActiva(estudiante.getId())).thenReturn(false);
+
+        // Act & Assert
+        assertThatThrownBy(() -> cursoService.getOfertaDisponiblePorBeca())
+                .isInstanceOf(BadRequestException.class)
+                .hasMessage("No tienes una beca vigente");
+        
+        verify(postulacionRepository, never()).findLastPostulacion(any());
+    }
+
+    @Test
+    void getOfertaDisponiblePorBeca_DeberiaLanzarNotFound_CuandoNoExistePostulacion() {
+        // Arrange
+        UUID idUsuario = UUID.randomUUID();
+        when(SecurityUtils.getCurrentUserId()).thenReturn(idUsuario);
+
+        Estudiante estudiante = Estudiante.builder().id(UUID.randomUUID()).build();
+        when(estudianteRepository.findByIdUsuario(idUsuario)).thenReturn(Optional.of(estudiante));
+
+        when(postulacionService.tieneBecaActiva(estudiante.getId())).thenReturn(true);
+
+        when(postulacionRepository.findLastPostulacion(estudiante.getId())).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThatThrownBy(() -> cursoService.getOfertaDisponiblePorBeca())
+                .isInstanceOf(NotFoundException.class)
+                .hasMessage("No se encontró postulación para el presente año");
+
+        verify(cursoRepository, never()).findByIdPostulacion(any(), any());
     }
 }
